...
                  isLastQuestion
                    ? t("question.finish")
                    : t("question.nextShort")
                }
                nextTestID={
                  isLastQuestion
                    ? "question-answers-review-finish"
                    : "question-answers-review-next"
                }
                previousLabel={t("question.previousShort")}
                previousTestID="question-answers-review-previous"
                showNextIcon={!isLastQuestion}
                onNext={handleNext}
                onPrevious={onPrevious}
...
