...
  const styles = useStyles({
    fillColor,
    fillWidth: `${normalized}%` as PercentageString,
  });

  return (
    <View style={styles.row} testID="result-topic-progress-row">
      <CText style={styles.title}>{title}</CText>
      <View style={styles.meter}>
        <View
          accessibilityRole="progressbar"
          accessibilityValue={{
            min: 0,
...
